[metadata]
name = argortqcpy
description = Real time QC automated tests for Argo data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/euroargodev/argortqcpy
author = argortqcpy developers
author_email = argo@bodc.ac.uk
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    sphinx>=3.1.0
    pydata-sphinx-theme

[pylint.FORMAT]
max-line-length = 120

[pycodestyle]
max-line-length = 120

[pydocstyle]
convention = google

[coverage:paths]
# tox records coverage against the installed package
# so gitlab ci doesn't understand the paths.
# to solve this, we tell coverage to treat the installed
# paths (**/...) the same as the source paths (first line)
source =
    argortqcpy
    **/argortqcpy
